src/Components/Nav/Nav.scss
// common.scss 올릴 거 (팀원과 상의 후 반영하고 지울예정.)
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
@import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');

@mixin atag {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

.NavHeader {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  border-bottom: 2px solid rgba(0, 0, 0, 0.06);

  .nav {
    position: relative;
    width: 100%;
    height: 60px;
    background-color: white;

    &:hover {
      background-color: white;
    }

    .navWrap {
      max-width: 1920px;
      min-width: 1100px;
      padding: 0 10px;
      margin: 0 auto;
      clear: both;

      .logoWrap {
        .MLBlogo {
          text-align: center;

          > h1 {
            @include atag;
            float: left;
            width: 100px;
            margin: 5px 20px 0;
            font-family: 'Staatliches', cursive;
            font-style: italic;
            font-weight: 900;
            font-size: 45px;
          }
        }
      }

      .menuLists {
        .list {
          float: left;
          > li {
            float: left;

            > a {
              @include atag;
              display: block;
              margin: 16.5px 20px;
              line-height: 25px;
              font-family: 'DM Sans', sans-serif;
              font-size: 17px;
              font-weight: 700;
              border-bottom: 2px solid transparent;

              &:hover {
                border-bottom: 2px solid black;
              }
            }
          }
        }

        .promote {
          position: relative;
          float: left;
          margin-left: 45px;

          &::before {
            position: absolute;
            top: 22px;
            left: -25px;
            width: 2px;
            height: 15px;
            content: '';
            background: #000;
          }
        }
      }

      .icons {
        position: relative;
        float: right;
        margin-top: 16px;

        .iconBox {
          background-color: transparent;
          border: none;

          a {
            @include atag;
            i {
              margin-left: 10px;
              font-size: 22px;
            }
          }

          &:last-child {
            position: relative;

            &:hover .loginMenu {
              display: block;
            }

            .loginMenu {
              position: absolute;
              display: none;
              top: 25px;
              right: 0px;
              background: white;

              ul {
                display: flex;
                justify-content: center;
                padding: 20px;
                width: 245px;

                li {
                  margin: 0 10px;

                  a {
                    font-size: 12px;

                    &:hover {
                      text-decoration: underline;
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}

